Minor cleanup in JoinRuleUtils